[tool.poetry]
name = "parents-and-baby-book"
version = "0.1.0"
description = "The parents and baby book."
authors = ["LM <hi@leima.is>"]
readme = "README.md"
packages = [{include = "pbb", from = "src"}]

[tool.poetry.dependencies]
python = "3.10.14"
mkdocs-material = "^9.4.10"
mkdocs-autorefs = "^0.5.0"
mkdocstrings = "^0.23.0"
mkdocs-with-pdf = "^0.9.3"
mkdocs-git-authors-plugin = "^0.7.2"
mkdocs-bibtex = "^2.11.0"
mkdocs-jupyter = "<=0.24.2"
mkdocs-exclude-search = "^0.6.5"
mkdocs-print-site-plugin = "^2.3.6"
loguru = "^0.7.2"
tabulate = "^0.9.0"
mkdocs-obsidian-interactive-graph-plugin = "^0.3.0"
setuptools = "^78.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
